Criação dos testes unitários